--- a/gala darbs/index.html
+++ b/gala darbs/index.html
@@ -44,9 +44,12 @@
             </div>
         </nav>
     </div>
+    <div>
+        <br>
+    </div>
 
     <div class="container">
-        <div class="row">
+        <!-- <div class="row"> -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -72,6 +75,9 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            <!-- </div> -->
+            <div>
+                <br>
             </div>
         </div>
         <div class="row">
@@ -108,7 +114,9 @@
         <p>penis</p>
 
     </div> -->
-
+    <div>
+        <br>
+    </div>
     <footer class="beigubloks">
         <p>kebab</p>
     </footer>
