--- a/gala darbs/index.html
+++ b/gala darbs/index.html
@@ -48,7 +48,7 @@
         <br>
     </div>
 
-    <div class="container">
+    <!-- <div class="container-fluid"> -->
         <!-- <div class="row"> -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
 
 
     <!-- <div class="beigubloks">
