--- a/gala darbs/Articles.html
+++ b/gala darbs/Articles.html
@@ -8,38 +8,114 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <title>Kebab page</title>
+    <title>Sad page</title>
 </head>
-<div style="background-color:grey;color:white;padding:10px;" class="pirmaisbloks">
+
+<body>
+
+    <div style="background-color:grey;color:white;padding:10px;" class="pirmaisbloks">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img class="logo" src="https://i.imgur.com/BIqDHnb.png">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav navbar1 ml-auto">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <img class="logo" src="https://i.imgur.com/BIqDHnb.png">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav navbar1 ml-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="./index.html">Home </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./articles.html">Articles <span class="sr-only">(current)</span></a>
+                    </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Articles <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Chat</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">About us</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-</body>
-</html>
+                        <a class="nav-link" href="./chat.html">Chat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./register.html">Register</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="./aboutus.html">About us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <br>
+    <div class="container-fluid">
+        <h6>Articles:</h6>
+        <br>
+        
+        <div class="row"></div>
+     <ul class="list-unstyled">
+        <li class="media">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3 " alt="...">
+            <div class="media-body my-4">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        <li class="media my-4 ">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3 " alt="...">
+            <div class="media-body ">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        <li class="media my-4">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3 " alt="...">
+            <div class="media-body ">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        <li class="media my-4">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3" alt="...">
+            <div class="media-body ">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        <li class="media my-4">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3" alt="...">
+            <div class="media-body ">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        <li class="media my-4">
+            <img src="https://i.imgur.com/nPg2jVO.png" class="mr-3" alt="...">
+            <div class="media-body ">
+                <h5 class="mt-0 mb-1">List-based media object</h5>
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.
+                <br>
+                <a href="./articles/article1.html"><button type="button" class="btn btn-primary"> Read more</button></a>
+            </div>
+        </li>
+        </ul>
+    </div>
